--- a/src/pug/pages/filter-page.pug
+++ b/src/pug/pages/filter-page.pug
@@ -2,16 +2,50 @@ extends ../main-layout.pug
 
 block main
 
-	- var dropdown = [{id: "adults", label: "взрослые"}, {id: "children", label: "дети"}, {id: "baby", label: "младенцы"}];
-	- var dropdown2 = [{id: "bedrooms", label: "спальни"}, {id: "bed", label: "кровати"}, {id: "separate-room", label: "ванные комнаты"}];
-	- var additional = [{id: "breakfast", label: "Завтрак"}, {id: "desk", label: "Письменный стол"}, {id: "feeding-chair", label: "Стул для кормления"}, {id: "cot", label: "Кроватка"}, {id: "tv", label: "Телевизор"}, {id: "shampoo", label: "Шампунь"}];
+	-
+		var dropdown = [
+			{id: "adults", label: "взрослые"},
+			{id: "children", label: "дети"},
+			{id: "baby", label: "младенцы"}
+		];
+	-
+		var dropdown2 = [
+			{id: "bedrooms", label: "спальни"},
+			{id: "bed", label: "кровати"},
+			{id: "separate-room", label: "ванные комнаты"}
+		];
+	-
+		var additional = [
+			{id: "breakfast", label: "Завтрак"},
+			{id: "desk", label: "Письменный стол"},
+			{id: "feeding-chair", label: "Стул для кормления"},
+			{id: "cot", label: "Кроватка"}, {id: "tv", label: "Телевизор"},
+			{id: "shampoo", label: "Шампунь"}
+		];
+	-
+		var cards = [
+			{id: "888", type: "люкс", price: "9990", comments: "145", stars: "5"},
+			{id: "840", type: "", price: "9900", comments: "65", stars: "4"},
+			{id: "980", type: "люкс", price: "8500", comments: "35", stars: "3"},
+			{id: "856", type: "", price: "7300", comments: "19", stars: "5"},
+			{id: "740", type: "", price: "6000", comments: "44", stars: "4"},
+			{id: "982", type: "", price: "5800", comments: "56", stars: "3"},
+			{id: "678", type: "", price: "5500", comments: "45", stars: "5"},
+			{id: "450", type: "", price: "5300", comments: "39", stars: "4"},
+			{id: "350", type: "", price: "5000", comments: "77", stars: "3"},
+			{id: "666", type: "", price: "5000", comments: "25", stars: "5"},
+			{id: "444", type: "", price: "5000", comments: "15", stars: "3"},
+			{id: "352", type: "", price: "5000", comments: "55", stars: "3"}
+		];
 
 	main.main
 		section.search-sect
 			.container
 				.row
-					.col-lg-3
-						.search-sect__filter.search-filter
+					.col-md-4.col-lg-3
+						button.search-sect__tgl-filter.btn.btn_fill.js-tgl-filter
+							span Показать фильтр
+						.search-sect__filter.search-filter.js-search-filter
 							.search-filter__block-date
 								.search-filter__title
 									span.h3 даты пребывания в отеле
@@ -110,11 +144,11 @@ block main
 											.formcheck
 												input.formcheck__checkbox(id=item.id type="checkbox", name=item.id)
 												label.formcheck__label(for=item.id) #{item.label}
-					.col-lg-9
+					.col-md-8.col-lg-9
 						.search-sect__right
 							h1.search-sect__title Номера, которые мы для вас подобрали
-							.result-sliders
-								- for (var card = 0; card < 12; card++)
+							.search-sect__sliders.result-sliders
+								each card, key in cards
 									.result-sliders__card.result-card
 										.result-card__slider.result-slider
 											.result-slider__wrap.js-result-slider
@@ -125,19 +159,45 @@ block main
 											button.result-slider__prev.js-slider-prev
 											button.result-slider__next.js-slider-next
 										.result-slider__bottom.current-info
-											.current-info__wrap
-												span.current-info__namber № 888
-												span.current-info__type люкс
-											.current-info__wrap
-												span.current-info__price 9 990₽
-												span.current-info__period в сутки
+											.current-info__wrap-top
+												.current-info__wrap
+													span.current-info__number № #{card.id}
+													span.current-info__type #{card.type}
+												.current-info__wrap
+													span.current-info__price.js-price #{card.price}
+													span.current-info__period в сутки
 											.current-info__rating
-												- for (var star = 0; star < 5; star++)
-													.current-info__stars.stars
-														input.stars__checkbox(type="radio" id="star" + star name="star")
-														label.stars__star(for="star" + star)
-															img(src="img/star.svg")
+												.current-info__stars.stars
+													- for (var star = 5; star > 0; star--)
+															if star === +card.stars
+																input.stars__radio(type="radio" id="star" + star + card.id * card.id name="star" + card.id checked)
+															else
+																input.stars__radio(type="radio" id="star" + star + card.id * card.id name="star" + card.id)
+															label.stars__star(for="star" + star + card.id * card.id)
+																<svg width="21" height="19" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+																	<path d="M10.2637 15.25L4.07617 19L5.7168 11.9688L0.279297 7.23438L7.45117 6.625L10.2637 0.015625L13.0762 6.625L20.248 7.23438L14.8105 11.9688L16.4512 19L10.2637 15.25Z" fill="url(#paint0_linear)"/>
+																	<defs>
+																		<linearGradient id="paint0_linear" x1="10.2637" y1="-2" x2="10.2637" y2="22" gradientUnits="userSpaceOnUse">
+																			<stop stop-color="#BC9CFF"/>
+																			<stop offset="1" stop-color="#8BA4F9"/>
+																		</linearGradient>
+																	</defs>
+																</svg>
 												.current-info__cnt
-													span 145
+													span #{card.comments}
 													span Отзывов
-
+							.search-sect__pagination.pagination
+								.pagination__btns
+									button.pagination__btn.pagination__btn_active
+										span 1
+									button.pagination__btn
+										span 2
+									button.pagination__btn
+										span 3
+									button.pagination__btn
+										span ..
+									button.pagination__btn
+										span 15
+									button.pagination__btn.pagination__btn_next
+										span
+								p.pagination__desc 1 – 12 из 100+ вариантов аренды
