--- a/src/scss/libs/bootstrap.scss
+++ b/src/scss/libs/bootstrap.scss
@@ -3,11 +3,13 @@ $grid-breakpoints: (
 	"xxs": map-get($breakpoints, "xxs"),
 	"xs": map-get($breakpoints, "xs"),
 	"sm": map-get($breakpoints, "sm"),
+	"md": map-get($breakpoints, "md"),
 	"lg": map-get($breakpoints, "lg"),
 );
 $container-max-widths: (
 	"xs": map-get($max-widths, "xs"),
 	"sm": map-get($max-widths, "sm"),
+	"md": map-get($max-widths, "md"),
 	"lg": map-get($max-widths, "lg"),
 );
 
