--- a/src/pug/components/footer-md.pug
+++ b/src/pug/components/footer-md.pug
@@ -1,8 +1,8 @@
-footer.footer
+footer.footer.footer_md
 	.footer-nav
 		.container
 			.row
-				.col-12.col-lg-3
+				.col-12
 					a.footer__logo(href="/")
 						img(src="img/logo.svg", alt="TOXIN")
 					.footer__content
@@ -46,10 +46,10 @@ footer.footer
 						h3.footer-col__title(href="#") Подписка
 						.footer__content
 							P Получайте специальные предложения и новости сервиса
-						.footer__subscribe
+						.footer__subscribe.subscribe
 							.formfield
 								input.formfield__input.formfield__input_with-btn#subscribe(type="email", name="subscribe", placeholder="Email")
-								button.formfield__submit
+								button.subscribe__submit
 	.footer-copyright
 		.container
 			.row
