--- a/src/pug/components/header-login.pug
+++ b/src/pug/components/header-login.pug
@@ -32,8 +32,8 @@ header.header
 											li.header-submenu__item
 												a(href="#").header-submenu__link= link
 						.header__login
-							.header__user-name(style="display: none") Юлий Цезарь
-							button.header__sign-in.btn.btn_height34.js-tgl-sign-in
+							button.header__user-name Юлий Цезарь
+							button.header__sign-in.btn.btn_height34.js-tgl-sign-in(style="display: none")
 								span войти
-							button.header__sign-up.btn.btn_height34.btn_fill.js-tgl-sign-up
+							button.header__sign-up.btn.btn_height34.btn_fill.js-tgl-sign-up(style="display: none")
 								span зарегистрироваться
