--- a/src/pug/pages/room-details.pug
+++ b/src/pug/pages/room-details.pug
@@ -1,9 +1,6 @@
-extends ../main-layout.pug
+extends ../main-layout
 
 block main
-
-	- var dropdown = [{id: "adults", label: "взрослые"}, {id: "children", label: "дети"}, {id: "baby", label: "младенцы"}];
-
 	main.main
 		section.main__sliders-wraper.sliders-wraper
 			.main__slider
@@ -128,71 +125,5 @@ block main
 										.rules__cancel-content
 											p Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
 							.room-info__right
-								form.room-info__form.form-booking(data-price="9990")
-									.form-booking__head.form-booking-head
-										.form-booking-head__left
-											span 888
-											span люкс
-										.form-booking-head__right
-											span.js-initial-price 0
-											span в сутки
-									.form-booking__date.js-calendar-parent.js-flag-date
-										.formfield.formfield_half-width
-											label.formfield__label(for="date-start") прибытие
-											.formfield__wrap
-												input.formfield__input.js-input-datepicker#date-start(type="text" autocomplete="off" placeholder="ДД.ММ.ГГГГ" readonly)
-												button.formfield__icon.js-btn-datepicker(type="button")
-										.formfield.formfield_half-width
-											label.formfield__label(for="date-end") выезд
-											.formfield__wrap
-												input.formfield__input.js-input-datepicker#date-end(type="text" autocomplete="off" placeholder="ДД.ММ.ГГГГ" readonly)
-												button.formfield__icon.js-btn-datepicker(type="button")
-										.js-range-datepicker
-									.form-booking__dropdown.formfield
-										.formfield__dropdown.js-dropdown-form(data-default-text="Сколько гостей")
-											.dropdown.js-tgl-dropdown
-												span.dropdown__text.js-guests Сколько гостей
-											button.formfield__icon.js-tgl-dropdown(type="button")
-											.dropdown__block
-												ul.dropdown__list.dropdown-list
-													each item in dropdown
-														li.dropdown-list__item
-															label.dropdown-list__label #{item.label}
-															.dropdown-list__quantity.quantity
-																button(type="button").quantity__btn.quantity-btn.js-btn-dec -
-																input.quantity__input.js-current-total(id=item.id type="number" value="0" min="0" max="5" name=item.id readonly)
-																button(type="button").quantity__btn.quantity-btn.quantity-btn_visible.js-btn-inc +
-												.dropdown__btns
-													button.btn-purple.js-dropdown-reset(type="button") очистить
-													button.btn-purple.btn-purple_visible.js-dropdown-apply(type="button") применить
-									.form-booking__price-list.price-list
-										ul.price-list__list
-											li.price-list__item.price-list-item
-												.price-list-item__wrap
-													span.price-list-item__text.price-list-item__text_price.js-initial-price 0
-													span.price-list-item__text.price-list-item__text_count.js-cnt-days 0 суток
-												span.price-list-item__text.price-list-item__text_price.js-price-multiples-days 0
-											li.price-list__item.price-list-item
-												.price-list-item__wrap
-													span.price-list-item__text Сбор за услуги:
-													.price-list-item__info.price-info i
-														p.price-info__tooltip Всё включено
-												span.price-list-item__text.price-list-item__text_price.js-service-price1 0
-											li.price-list__item.price-list-item
-												.price-list-item__wrap
-													span.price-list-item__text Сбор за дополнительные услуги:
-													.price-list-item__info.price-info i
-														p.price-info__tooltip За сервис
-												span.price-list-item__text.price-list-item__text_price.js-service-price2 300
-											li.price-list__item.price-list-item
-												.price-list-item__wrap
-													span.price-list-item__text Скидка:
-													.price-list-item__info.price-info i
-														p.price-info__tooltip По акции
-												span.price-list-item__text.price-list-item__text_price.js-discount 2 179
-										.price-list__total
-											span Итого
-											span
-											span.js-total-price 0
-									button.form-booking__submit.btn.btn_fill.btn_with-arrow(type="submit")
-										span забронировать
+								.room-info__form
+									include ../components/form-booking
