--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,6 @@
 @import "popup";
 @import "forms";
 @import "jq-ui-calendar";
-@import "home";
 @import "sliders";
 @import "room-info";
 @import "landing-page";
@@ -16,3 +15,6 @@
 @import "no-ui-slider";
 @import "result-card";
 @import "pagination";
+@import "colors-type";
+@import "all-cards";
+@import "all-elements";
