--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,7 +1,48 @@
 .footer {
+	$p: &;
 	display: block;
 	border-top: 1px solid $dark25;
 	background-color: $white;
+
+	&_md {
+		padding: 120px 0;
+
+		#{$p}__logo {
+			margin-right: auto;
+			margin-left: auto;
+		}
+
+		#{$p}__content {
+			display: none;
+		}
+
+		.footer-nav {
+			padding: 0;
+		}
+
+		.footer-col {
+			display: none !important;
+		}
+
+		.footer-copyright {
+			border: none;
+
+			&__wrap {
+				height: auto;
+				flex-direction: column;
+				justify-content: center;
+			}
+
+			&__desc {
+				margin-bottom: 25px;
+
+				p {
+					width: 100%;
+					text-align: center;
+				}
+			}
+		}
+	}
 
 	@include media(md) {
 		padding: 120px 0;
@@ -46,10 +87,10 @@
 	}
 }
 
-// .footer-nav,
-// .footer-copyright {
-// 	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-// }
+.footer-nav,
+.footer-copyright {
+	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+}
 
 .footer-nav {
 	padding: 100px 0;
@@ -105,43 +146,6 @@
 		&:focus,
 		&:active {
 			color: $dark75;
-		}
-	}
-}
-
-.subscribe {
-	&__submit {
-		position: absolute;
-		right: 1px;
-		top: 1px;
-		display: block;
-		width: 42px;
-		height: 42px;
-		padding: 0;
-		border: none;
-
-		&::before,
-		&::after {
-			content: "";
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			display: block;
-		}
-
-		&::before {
-			transform: translate(-50%, -50%) rotate(45deg);
-			width: 11px;
-			height: 11px;
-			border-top: 2px solid $purple;
-			border-right: 2px solid $purple;
-		}
-
-		&:after {
-			transform: translate(-50%, -50%);
-			width: 14px;
-			height: 2px;
-			background-color: $purple;
 		}
 	}
 }
