--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -8,6 +8,10 @@
 	opacity: 0;
 	transition: opacity .3s ease;
 
+	@include media(md) {
+		padding-top: 70px;
+	}
+
 	@include media(xs) {
 		padding-top: 0;
 		align-items: center;
@@ -38,13 +42,18 @@
 	&__wrap {
 		position: relative;
 		width: 380px;
-		overflow-y: auto;
 		max-height: calc(var(--vh, 1vh) * 100);
-		// background-color: $white;
 
 		@include media(xs) {
+			overflow-y: auto;
 			width: 100%;
 			max-height: 100vh;
+
+			&::-webkit-scrollbar {
+				display: none;
+				width: 0;
+				height: 0;
+			}
 		}
 	}
 
