--- a/src/scss/_result-card.scss
+++ b/src/scss/_result-card.scss
@@ -36,6 +36,7 @@
 
 .result-card {
 	display: block;
+	max-width: 270px;
 	width: calc(33.33% - 8px);
 	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 	border-radius: 4px;
@@ -54,6 +55,14 @@
 	}
 
 	@include media(xs) {
+		width: 100%;
+
+		&:nth-child(3n + 2) {
+			width: 100%;
+		}
+	}
+
+	&_full-width {
 		width: 100%;
 
 		&:nth-child(3n + 2) {
@@ -260,6 +269,7 @@
 	$p: &;
 	display: flex;
 	flex-direction: row-reverse;
+	justify-content: flex-end;
 
 	&__radio {
 		position: absolute;
