--- a/src/pug/pages/cards.pug
+++ b/src/pug/pages/cards.pug
@@ -14,8 +14,8 @@ block main
 				form.form
 					h1.form__title Найдём номера под ваши пожелания
 					include ../components/range-calendar
-					.h3.form__subtitle гости
-					.form__dropdown
+					.formfield
+						label.formfield__label гости
 						include ../components/dropdown
 					button.form__submit.btn.btn_fill.btn_with-arrow(type="submit")
 						span подобрать номер
