--- a/src/pug/pages/room-details.pug
+++ b/src/pug/pages/room-details.pug
@@ -116,10 +116,10 @@ block main
 								.room-info__rules.rules
 									.rules__block
 										.rules__title Правила
-										ul.rules__list.rules-list
-											li.rules-list__item Нельзя с питомцами
-											li.rules-list__item Без вечеринок и мероприятий
-											li.rules-list__item Время прибытия — после 13:00, а выезд до 12:00
+										ul.rules__list.bullet-list
+											li.bullet-list__item Нельзя с питомцами
+											li.bullet-list__item Без вечеринок и мероприятий
+											li.bullet-list__item Время прибытия — после 13:00, а выезд до 12:00
 									.rules__block
 										.rules__title Отмена
 										.rules__cancel-content
