--- a/src/pug/components/dropdown-conditions.pug
+++ b/src/pug/components/dropdown-conditions.pug
@@ -5,20 +5,19 @@
 		{id: "separate-room", label: "ванные комнаты"}
 	];
 
-.formfield
-	.formfield__dropdown.js-dropdown-form(data-default-text="Доп. условия")
-		.dropdown.js-tgl-dropdown
-			span.dropdown__text.js-guests Доп. условия
-		button.formfield__icon.js-tgl-dropdown(type="button")
-		.dropdown__block
-			ul.dropdown__list.dropdown-list
-				each item in dropdown
-					li.dropdown-list__item
-						label.dropdown-list__label #{item.label}
-						.dropdown-list__quantity.quantity
-							button(type="button").quantity__btn.quantity-btn.js-btn-dec -
-							input.quantity__input.js-current-total(id=item.id type="number" value="0" min="0" max="5" name=item.id readonly)
-							button(type="button").quantity__btn.quantity-btn.quantity-btn_visible.js-btn-inc +
-			.dropdown__btns
-				button.btn-purple.js-dropdown-reset(type="button") очистить
-				button.btn-purple.btn-purple_visible.js-dropdown-apply(type="button") применить
+.formfield__dropdown
+	.dropdown.js-tgl-dropdown
+		span.dropdown__text.js-guests Доп. условия
+	button.formfield__icon.js-tgl-dropdown(type="button")
+	.dropdown__block
+		ul.dropdown__list.dropdown-list
+			each item in dropdown
+				li.dropdown-list__item
+					label.dropdown-list__label #{item.label}
+					.dropdown-list__quantity.quantity
+						button(type="button").quantity__btn.quantity-btn.js-btn-dec -
+						input.quantity__input.js-current-total(id=item.id type="number" value="0" min="0" max="5" name=item.id readonly)
+						button(type="button").quantity__btn.quantity-btn.quantity-btn_visible.js-btn-inc +
+		.dropdown__btns
+			button.btn-purple.js-dropdown-reset(type="button") очистить
+			button.btn-purple.btn-purple_visible.js-dropdown-apply(type="button") применить
