--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../ui-layout
 
 block main
-	main.main(style="display: flex; justify-content: center; padding: 100px 20px")
+	main.main(style="display: flex; justify-content: center; height: 100vh; padding: 100px 20px")
 		ul
 			li
 				a(href="/home.html" target="_blank")
