--- a/src/scss/_all-elements.scss
+++ b/src/scss/_all-elements.scss
@@ -5,12 +5,21 @@
 	background-color: $white;
 
 	@include media(xs) {
+		justify-content: center;
 		padding: 20px 0;
 	}
 
 	&__col {
 		margin-right: 126px;
 		margin-bottom: 100px;
+
+		&:nth-child(2) {
+			margin-right: 72px;
+
+			@include media(xs) {
+				margin-right: 0;
+			}
+		}
 
 		&:last-child {
 			margin-right: 0;
@@ -76,23 +85,146 @@
 	&__pagination {
 		width: 240px;
 	}
+
+	&__wrap {
+		display: flex;
+
+		.stars {
+			&:first-child {
+				margin-right: 20px;
+			}
+		}
+	}
 }
 
 .dropdown-state {
 	display: flex;
 	flex-wrap: wrap;
-	padding: 140px 140px 50px;
+	padding: 0 140px 50px;
 	background-color: $white;
+
+	@include media(xs) {
+		justify-content: center;
+		padding: 20px 0;
+	}
 
 	&__col {
 		display: block;
+		min-height: 310px;
 		width: 266px;
-		margin-bottom: 100px;
+		margin-bottom: 40px;
+		margin-right: 180px;
+
+		@include media(xs) {
+			margin-right: 0;
+		}
 	}
 
 	&__col-2 {
 		display: block;
 		width: 320px;
-		margin-bottom: 100px;
+		min-height: 240px;
+		margin-bottom: 40px;
+		margin-right: 72px;
+
+		&_last {
+			margin-right: 0;
+		}
+
+		@include media(xs) {
+			margin-right: 0;
+		}
+	}
+
+	&__drop {
+		display: block;
+		margin-bottom: 20px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.lists {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 140px 50px;
+	background-color: $white;
+
+	@include media(xs) {
+		justify-content: center;
+		padding: 20px 0;
+	}
+
+	&__col {
+		display: block;
+		width: 266px;
+		margin-right: 180px;
+		margin-bottom: 40px;
+
+		@include media(xs) {
+			margin-right: 0;
+		}
+	}
+
+	&__col-2 {
+		display: block;
+		width: 266px;
+		margin-right: 126px;
+		padding-top: 8px;
+		margin-bottom: 40px;
+
+		@include media(xs) {
+			margin-right: 0;
+		}
+	}
+
+	&__col-3 {
+		display: block;
+		margin-bottom: 40px;
+	}
+
+	&__block {
+		display: block;
+		margin-bottom: 20px;
+
+		.h3 {
+			margin-bottom: 16px;
+			text-transform: uppercase;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.last {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 140px 92px;
+	background-color: $white;
+
+	@include media(xs) {
+		padding: 20px 0;
+	}
+
+	&__col {
+		display: block;
+
+		&:first-child {
+			margin-right: 170px;
+			margin-bottom: 40px;
+
+			@include media(xs) {
+				margin-right: 0;
+			}
+		}
+
+		&:last-child {
+			width: 100%;
+			max-width: 712px;
+		}
 	}
 }
