--- a/src/scss/_filter-page.scss
+++ b/src/scss/_filter-page.scss
@@ -76,7 +76,7 @@
 			width: 100%;
 			height: 44px;
 			align-items: center;
-			padding: 0;
+			padding: 0 56px 0 0;
 			border: none;
 			background-color: transparent;
 
