--- a/src/pug/main-layout.pug
+++ b/src/pug/main-layout.pug
@@ -19,3 +19,4 @@ html(lang='ru')
 			include ./components/footer
 			include ./components/popup-sign-in
 			include ./components/popup-sign-up
+			include ./components/popup-find
