--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,23 +4,23 @@ block main
 	main.main(style="display: flex; justify-content: center; height: 100vh; padding: 100px 20px")
 		ul
 			li
-				a(href="/home.html" target="_blank")
+				a(href="/task2-webpack2020/home.html" target="_blank")
 					h1 Главная
 			li
-				a(href="/filter-page.html" target="_blank")
+				a(href="/task2-webpack2020/filter-page.html" target="_blank")
 					h1 Стариница с фильтром
 			li
-				a(href="/room-details.html" target="_blank")
+				a(href="/task2-webpack2020/room-details.html" target="_blank")
 					h1 Детальная страница номера
 			li
-				a(href="/colors-type.html" target="_blank")
+				a(href="/task2-webpack2020/colors-type.html" target="_blank")
 					h1 Цвета и заголовки
 			li
-				a(href="/form-elements.html" target="_blank")
+				a(href="/task2-webpack2020/form-elements.html" target="_blank")
 					h1 Элементы формы
 			li
-				a(href="/cards.html" target="_blank")
+				a(href="/task2-webpack2020/cards.html" target="_blank")
 					h1 Все карточки
 			li
-				a(href="/headers-footers.html" target="_blank")
+				a(href="/task2-webpack2020/headers-footers.html" target="_blank")
 					h1 Хедер и футер
