--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -4,7 +4,7 @@
 	display: none;
 	justify-content: center;
 	align-items: flex-start;
-	padding-top: 90px;
+	padding-top: 140px;
 	opacity: 0;
 	transition: opacity .3s ease;
 
@@ -25,6 +25,15 @@
 		opacity: 1;
 	}
 
+	&_left {
+		justify-content: flex-start;
+		padding-left: 140px;
+
+		@include media(xs) {
+			padding-left: 0;
+		}
+	}
+
 	&, &__bg {
 		top: 0;
 		left: 0;
@@ -36,18 +45,18 @@
 
 	&__bg {
 		z-index: 0;
-		background-color: $dark25;
+		background-color: $dark5;
 	}
 
 	&__wrap {
 		position: relative;
 		width: 380px;
+		max-height: 100vh;
 		max-height: calc(var(--vh, 1vh) * 100);
 
 		@include media(xs) {
 			overflow-y: auto;
 			width: 100%;
-			max-height: 100vh;
 
 			&::-webkit-scrollbar {
 				display: none;
